--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-template-compiler": "^2.6.14",
     "vue-verification-code-input": "^1.0.0",
     "vuetify": "^2.6.1",
+    "vuex": "^3.6.2",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
