--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
@@ -24,6 +25,7 @@
     "vue-template-compiler": "^2.6.14",
     "vue-verification-code-input": "^1.0.0",
     "vuetify": "^2.6.1",
+    "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0",
     "webpack": "^4.46.0"
   },
