--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-clipboard2": "^0.2.1",
     "vue": "^2.6.14",
+    "vue-clipboard2": "^0.3.3",
     "vue-phone-number-input": "^1.1.12",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
